// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Role deletion should fail when deleting a non-editable system role (Admin) 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "role": [
          {
            "errors": [
              {
                "code": "ROLE_NOT_EDITABLE",
                "message": "Role is not editable",
                "userFriendlyMessage": "This role cannot be modified because it is a system role. Only custom roles can be edited.",
              },
            ],
            "flatEntityMinimalInformation": {
              "label": "Admin",
              "universalIdentifier": Any<String>,
            },
            "metadataName": "role",
            "status": "fail",
            "type": "delete",
          },
        ],
      },
      "message": "Validation failed for 1 role",
      "summary": {
        "role": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "This role cannot be modified because it is a system role. Only custom roles can be edited.",
    },
    "message": "Multiple validation errors occurred while deleting role",
    "name": "GraphQLError",
  },
]
`;

exports[`Role deletion should fail when deleting a non-existent role 1`] = `
[
  {
    "extensions": {
      "code": "NOT_FOUND",
      "subCode": "ROLE_NOT_FOUND",
      "userFriendlyMessage": "The role you are looking for could not be found. It may have been deleted or you may not have access to it.",
    },
    "message": "Role not found",
    "name": "NotFoundError",
  },
]
`;

exports[`Role deletion should fail when deleting a role still assigned to an active API key while the default role cannot be assigned to API keys 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "role": [
          {
            "errors": [
              {
                "code": "ROLE_CANNOT_BE_ASSIGNED_TO_API_KEYS",
                "message": "Cannot delete role "Role Held By An Active API Key": the workspace default role cannot be assigned to API keys.",
                "userFriendlyMessage": "Cannot delete this role: it is still assigned to one or more API keys, and the workspace default role cannot be assigned to API keys. Please reassign these API keys to another role first.",
              },
            ],
            "flatEntityMinimalInformation": {
              "label": "Role Held By An Active API Key",
              "universalIdentifier": Any<String>,
            },
            "metadataName": "role",
            "status": "fail",
            "type": "delete",
          },
        ],
      },
      "message": "Validation failed for 1 role",
      "summary": {
        "role": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Cannot delete this role: it is still assigned to one or more API keys, and the workspace default role cannot be assigned to API keys. Please reassign these API keys to another role first.",
    },
    "message": "Multiple validation errors occurred while deleting role",
    "name": "GraphQLError",
  },
]
`;

exports[`Role deletion should fail when deleting the workspace default role (Member) 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": Any<String>,
      "userFriendlyMessage": "The default role cannot be deleted as it is required for the workspace to function properly.",
    },
    "message": "Default role cannot be deleted",
  },
]
`;
